385 Corrected spacing as per ticket

--- a/blocks/v2-section-header/v2-section-header.css
+++ b/blocks/v2-section-header/v2-section-header.css
@@ -23,7 +23,7 @@
 }
 
 .v2-section-header-container > .v2-section-header-wrapper:nth-child(5) {
-  padding-top: 40px;
+  padding-top: 64px;
 }
 
 @media (min-width: 1200px) {
